chore: constract change / resizing element / fix scrollbar is now visible when screen height too small

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,8 +10,7 @@
 }
 
 body,
-html,
-#__nuxt {
+html {
   @apply bg-white1 2xl:bg-yellow 2xl:h-full;
   scroll-behavior: smooth;
 }
